crates/oxc_css_parser/tests/error/scss/value/interpolation/unterminated.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ unterminated.scss:4:1
  │
4 │ 
  │ ^


